# python-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.package_name }}/: LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  {{ cookiecutter.package_name }}.sublime-project
{{ cookiecutter.package_name }}/.github/workflows/: publish.yml  test.yml
{{ cookiecutter.package_name }}/tests/: test_{{ cookiecutter.package_name }}.py
{{ cookiecutter.package_name }}/{{ cookiecutter.package_name }}/: __init__.py  main.py
