[tool.poetry]
name = "{{ cookiecutter.name }}"
version = "{{ cookiecutter.package_version }}"
description = "{{ cookiecutter.description }}"
authors = ["{% if cookiecutter.author %}{{ cookiecutter.author }} <{{ cookiecutter.author_email }}>{% endif %}"]
license = "MIT"
packages = [{include = "{{ cookiecutter.package_name}}"},]

[tool.poetry.dependencies]
python = "~{{ cookiecutter.python_version }}"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
